src/test/ui/closures/closure-expected-type/expect-region-supply-region-2.stderr
error[E0308]: mismatched types
  --> $DIR/expect-region-supply-region-2.rs:14:33
   |
LL |     closure_expecting_bound(|x: &'x u32| {
   |                                 ^^^^^^^ lifetime mismatch
   |
   = note: expected reference `&u32`
              found reference `&'x u32`
note: the anonymous lifetime #1 defined here...
  --> $DIR/expect-region-supply-region-2.rs:14:29
   |
LL |       closure_expecting_bound(|x: &'x u32| {
   |  _____________________________^
LL | |
LL | |
LL | |
...  |
LL | |         f = Some(x);
LL | |     });
   | |_____^
note: ...does not necessarily outlive the lifetime `'x` as defined here
  --> $DIR/expect-region-supply-region-2.rs:9:30
   |
LL | fn expect_bound_supply_named<'x>() {
   |                              ^^

error[E0308]: mismatched types
  --> $DIR/expect-region-supply-region-2.rs:14:33
   |
LL |     closure_expecting_bound(|x: &'x u32| {
   |                                 ^^^^^^^ lifetime mismatch
   |
   = note: expected reference `&u32`
              found reference `&'x u32`
note: the lifetime `'x` as defined here...
  --> $DIR/expect-region-supply-region-2.rs:9:30
   |
LL | fn expect_bound_supply_named<'x>() {
   |                              ^^
note: ...does not necessarily outlive the anonymous lifetime #1 defined here
  --> $DIR/expect-region-supply-region-2.rs:14:29
   |
LL |       closure_expecting_bound(|x: &'x u32| {
   |  _____________________________^
LL | |
LL | |
LL | |
...  |
LL | |         f = Some(x);
LL | |     });
   | |_____^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
